# the-invisible-college

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
archive/: README.md
blog/: .prettierignore  .prettierrc.json  astro.config.mjs  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts
docs/: 00-overview.md  01-charter.md  02-architecture.md  03-fellows.md  04-admissions.md  05-curriculum.md  06-research.md  07-peer-review.md  08-publication.md  09-resources.md  10-implementation.md  11-risks.md  research-agenda.md
genomes/: ada-lovelace.json  adam-smith.json  alexander-von-humboldt.json  charles-sanders-peirce.json  darcy-thompson.json  emmy-noether.json  florence-nightingale.json  frank-ramsey.json  grace-hopper.json  henri-poincare.json  herbert-simon.json  ibn-al-haytham.json  ludwik-fleck.json  michel-de-montaigne.json  panini.json  pierre-bayle.json  william-james.json
institute/: __init__.py  __main__.py  archive_index.py  audit.py  autopilot.py  brief_helpers.py  budget.py  centers.py  charter.py  citation_lint.py  claude_runner.py  cli.py  code_artifacts.py  cohort_calls.py  collaborators.py  curriculum.py  db.py  decisions.py  departments.py  diff_classify.py  editorial_board.py  editorial_followups.py  episodic.py  fellow.py  memory_backfill.py  open_problems.py  parsing.py  paths.py  redaction.py  reputation.py  review_declines.py  reviewer_eligibility.py  runtime.py  sabbaticals.py  safe_io.py  schedule.py  seminars.py  (+6 more)
(+3787 files in other folders)
