[project]
name = "invisible-college"
version = "0.1.0"
description = "Orchestrator for The Invisible College: a research institution of AI Fellows."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sean Reid", email = "seanreid.mail@gmail.com" }]

dependencies = [
  "click>=8.1",
  "jinja2>=3.1",
  "pydantic>=2.9",
  "rich>=13.9",
  "tomli-w>=1.0",
]

[project.scripts]
institute = "institute.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["institute"]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-ra --strict-markers"
